# rl-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  bench.py  pyproject.toml  train.py
.github/workflows/: pr-pytest-action.yml
belief/: belief_eval.py  belief_net_lr_0.001_dropout_0.1_hidden_20.pth  gen_dataset.py  train.py
bench_eval/: bench.json  bench_mcts.json  graph_bench.py
checkpoints/50k_test/: wandb_id
checkpoints/50k_test/step_0/: self.pt
configs/: debug.yaml  test.yaml
eval/: __init__.py  agent_scorer.py  bmcs.py  bmcs_agent.py  imp_arrs.npz  imp_arrs_polrl.npz  policy_agent.py  results.txt  results_w_extra_info.txt  results_w_extra_info_polrl.txt  sampler.py
models/: __init__.py  belief_network.py  mlp.py  network.py  policy_network.py  value_network.py
sl/: gen_dataset.py  train.py
tests/: actions_test.py  actor_test.py  bmcs_test.py  config_init_test.py  dealer_test.py  learner_test.py  mrsw_test.py  policy_agent_test.py  test_learner.py
training/: __init__.py  actor.py  learner.py  replay_buffer.py  run.py
utils/: __init__.py  actions.py  bmcs.py  cloneable.py  config.py  data.py  mrsw.py  transform_checkpoints.py
