[project]
name = "rl-bridge"
authors = [
    {name = "Carla Biermann", email = "cb2318@cam.ac.uk"},
    {name = "Yuval Weiss", email = "yw580@cam.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "torch (>=2.2.0,<2.3.0)",
    "open-spiel (>=1.5,<2.0)",
    "numpy (>=1.0,<2.0)",
    "torchrl (>=0.3.0,<0.4.0)",
    "click (>=8.1.8,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.6"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
